<resources>
    <string name="app_name">Рябинин Игорь</string>
    <string name="miller777_mail_ru">miller777@mail.ru</string>
    <string name="my_vk_profile">http://vk.com/id4306032</string>
    <string name="my_repository">https://github.com/miller7777777/DevIntensive/</string>
    <string name="personal_info">Здесь должна быть какая-то персональная информация. Лень писать. Что-то типа.</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать фото</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choise.message">Выберите фото</string>
    <string name="error_file_create">Ошибка при создании файла</string>
    <string name="error_msg_need_permission">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="allove">Разрешить</string>
    <string name="enter">Войти</string>
    <string name="user_name">Рябинин Игорь</string>
    <string name="rating">Рейтинг</string>
    <string name="rating_value">5</string>
    <string name="code_lines">Написано строк кода</string>
    <string name="code_lines_value">555</string>
    <string name="projects">Проектов</string>
    <string name="projects_value">1</string>
    <string name="mobile_phone">Мобильный телефон</string>
    <string name="miller777_mobile_phone">89213393817</string>
    <string name="e_mail">E-Mail</string>
    <string name="vk_profile">Профиль в VK</string>
    <string name="repository">Репозиторий</string>
    <string name="about_person">О себе</string>
    <string name="password">Password</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="escape">Отмена</string>
    <string name="permission_granted">Разрешение получено</string>

    <!--AuthActivity-->
    <string name="auth.authorization_enter">Войти</string>
    <string name="auth.email">Введите e-mail</string>
    <string name="auth.password">Введите пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>

    <!-- Font family -->
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="profile.bio.dummy">Some personal information.</string>

    <!--Dummies-->
    <string name="dummy.app_name">Miller777 Devintensive</string>
    <string name="dummy.profile_phone">89213393817</string>
    <string name="dummy.profile_email">miller777@mail.ru</string>
    <string name="dummy.profile_vk">http://vk.com/id4306032</string>
    <string name="dummy.profile_gitHubRepo">https://github.com/miller7777777/DevIntensive</string>
    <string name="dummy.profile_about">Some personal information.
    </string>



</resources>
