<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:elevation="2dp"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="0dp"
                  android:paddingRight="0dp"
                  android:paddingTop="0dp"
                  tools:context=".ui.activities.MainActivity">

        <!--Здесь начинаем рисовать layout с полями для рейтинга и пр.-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"
            android:background="@color/color_primary"
            android:divider="@drawable/separator"
            android:dividerPadding="3dp"
            android:orientation="horizontal"

            android:showDividers="middle"

            >

            <EditText
                android:id="@+id/rating"
                style="@style/field_for_rating"
                android:text="@string/rating_value"
                />

            <EditText
                style="@style/field_for_rating"
                android:text="@string/code_lines_value"
                />

            <EditText
                android:id="@+id/number_of_projects"
                style="@style/field_for_rating"
                android:text="@string/projects_value"
                />


        </LinearLayout>

        <!--Здесь закончили рисовать layout с полями для рейтинга и пр-->

        <!--Здесь начинаем рисовать layout с заголовками для рейтинга и пр.-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:adjustViewBounds="true"
            android:background="@color/color_primary"
            android:divider="@drawable/separator"
            android:dividerPadding="3dp"
            android:orientation="horizontal"

            android:showDividers="middle"
            >

            <EditText

                style="@style/field_for_rating"
                android:text="@string/rating"
                android:textSize="16dp"

                />

            <EditText

                style="@style/field_for_rating"
                android:text="@string/code_lines"
                android:textSize="16dp"
                />

            <EditText

                style="@style/field_for_rating"
                android:text="@string/projects"
                android:textSize="16dp"
                />


        </LinearLayout>

        <!--Здесь закончили рисовать layout с заголовками для рейтинга и пр-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        android:text="@string/miller777_mobile_phone"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:text="@string/miller777_mail_ru"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/email_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"/>


        <!--Отсюда рисуем профиль "В контакте"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vk_grey_24dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <EditText
                        android:id="@+id/vk_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/vk_profile"
                        android:inputType="textUri"
                        android:text="@string/my_vk_profile"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/vk_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"/>

        <!--Здесь закончили рисовать фрейм с профилем VK-->


        <!--Отсюда начинаем рисовать фрейм с профилем GitHub-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_repository_grey_24dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <EditText
                        android:id="@+id/github_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/repository"
                        android:inputType="textUri"
                        android:text="@string/my_repository"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/git_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"/>

        <!--Здесь закончили рисовать фрейм с профилем Github-->

        <!--Отсюда начинаем рисовать фрейм с информацией о себе-->


        <LinearLayout
            android:id="@+id/bio_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_person_black_24dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <EditText
                        android:id="@+id/bio_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/about_person"
                        android:inputType="textMultiLine"
                        android:text="@string/personal_info"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"/>

        <!--Здесь закончили рисовать фрейм с информацией о себе-->


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
