<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg"
    tools:context="com.softdesign.devintensive.ui.activities.LoginActivity"
    >

    <RelativeLayout
        android:id="@+id/autorization_window"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/autorization_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/enter"
            android:textSize="24sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:padding="8dp"/>

        <!--Отсюда начинаем рисовать строку для ввода логина-->

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/autorization_title">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <EditText
                        android:id="@+id/login_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"/>

        <!--Здесь заканчиваем рисовать строку для ввода логина-->

        <!--Отсюда начинаем рисовать строку для ввода пароля-->

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/login_layout">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"/>

        <!--Здесь заканчиваем рисовать строку для ввода пароля-->

        <!--Отсюда начинаем рисовать строку для кнопки входа-->

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:background="@color/red"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/size_big_72"/>

        <!--Здесь закончили рисовать кнопку входа-->

        <!--поле для восстановления пароля-->

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_centerHorizontal="true"

            android:layout_alignParentBottom="true"
            android:padding="@dimen/spacing_small_8"/>




    </RelativeLayout>

</RelativeLayout>
